# models_playground

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
models_playground/: __init__.py
models_playground/diffusion/: attention.py  convnext.py  ddpm.py  resnet.py  unet.py
models_playground/diffusion/scripts/: run_ddpm.py
models_playground/transformers/: attention.py  transformer.py
models_playground/transformers/scripts/: run_transformer.py
tests/diffusion/: test_convnext.py  test_ddpm.py  test_diffusion_attention.py  test_resnet.py  test_unet.py
tests/transformers/: test_attention.py  test_transformer.py
