[tool.poetry]
name = "models_playground"
version = "0.1.0"
description = ""
authors = ["Kevin Huo <github.com/kwhuo68>"]
readme = "README.md"
packages = [{include = "models_playground"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
pytest = "^7.2.1"
numpy = "^1.24.2"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
einops = "^0.6.0"
datasets = "^2.9.0"
matplotlib = "^3.6.3"
tqdm = "^4.64.1"
pillow = "^9.4.0"
torchvision = "^0.14.1"
transformers = "^4.26.1"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
exclude = ["notebooks"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
